<resources>
    <string name="app_name">AlcJournalApp</string>

    <string name="add_button">Save Note</string>
    <string name="update_button">Update Note</string>
    <string name="note_title">Enter note title</string>
    <string name="note_content">Enter note content </string>
    <string name="note_description">Enter note description</string>
    <string name="note_tags">Enter note tags</string>
    <string name="note_create_time">Created on</string>
    <string name="note_update_time">Last updated on</string>
    <string name="note_author">Author</string>
    <string name="mnuAddNote">Add New Note</string>
    <string name="mnuHome">Home</string>
    <string name="mnuAllNotes">My Notes</string>
    <string name="mnuLogout">Logout</string>
    <string name="action_settings">Settings</string>
    <string name="openDrawer">Open</string>
    <string name="closeDrawer">Close</string>
</resources>
