<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddNoteActivity"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textViewAddNoteLabel"
            android:textAlignment="center"
            android:layout_margin="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:text="CREATE NOTE"
            android:textSize="24sp"
            android:textStyle="bold" />


        <EditText
            android:id="@+id/editTextNoteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note_title"
            android:layout_margin="15dp"/>

        <EditText
            android:id="@+id/editTextNoteDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note_description"
            android:layout_margin="15dp"/>

        <EditText
            android:id="@+id/editTextNoteContent"
            android:inputType="textMultiLine"
            android:lines="6"
            android:minLines="4"
            android:gravity="top|left"
            android:maxLines="10"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/note_content"
            android:scrollbars="vertical"
            android:layout_margin="15dp"
            />

        <EditText
            android:id="@+id/editTextNoteTags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/note_tags"
            android:layout_margin="15dp" />

        <Button
            android:id="@+id/saveButton"
            style="@style/TextAppearance.AppCompat.Large"
            android:layout_width="202dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@color/colorPrimary"
            android:text="@string/add_button"
            android:textColor="@android:color/primary_text_dark" />

    </LinearLayout>

</ScrollView>